--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/frontend_modiji/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <title>Modi generator</title>
 </head>
@@ -32,6 +32,6 @@
      </div>
      <div class="flex-box-container-2" id="modiji"></div>
     </div>
-    <script src="/javascript.js"></script>
+    <script src="/frontend_modiji/javascript.js"></script>
 </body>
 </html>
